--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,15 +85,7 @@ button:focus {
 	/*margin-left: 17px;*/
 	background: #f6f6f6;
 }
-#features h5 {
-	padding-top: 10px;
-	padding-bottom: 40px;
-    margin-left: auto;
-    margin-right: auto; 
-	font-size: 13px;
-	width: 110px;
-	height: 110px;
-}
+
 #features img {
 	width: 110px;
 	height: 110px;
@@ -105,26 +97,36 @@ button:focus {
 	padding: 10px;
 	box-shadow: 10px 10px 10px rgba(170, 77, 77, 0.555);
 }
-#features h6 {
-    margin-left: auto;
-    margin-right: auto; 
-	color:#726f6f;
-	border-radius: 00px 60px 0px 60px;
-	line-height: 30px;
-	text-align: justify;  
-}
 #features .text-container {
-	color:#726f6f;
+	color:#726560;
 	border: solid;
 	border-radius: 00px 60px 0px 60px;
 	padding: 50px;
 	box-shadow: 20px 20px 20px rgba(170, 77, 77, 0.555);
 	line-height: 30px;
 }
-
+#features h6 {
+    margin-left: auto;
+    margin-right: auto; 
+	color:#726560;
+	border-radius: 00px 60px 0px 60px;
+	line-height: 30px;
+	text-align: justify;  
+}
+#features h5 {
+	padding-top: 10px;
+	padding-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto; 
+	font-size: 13px;
+	width: 110px;
+	height: 110px;
+	color:#726560;
+}
 #features h3 {
 font-size: 25px;
 padding-bottom: 30px;
+color:#726560;
 }
 #features .row div {
 	margin-bottom: -25px;
@@ -469,7 +471,6 @@ color: rgb(13, 236, 106);
 	margin-top: 20px;
     margin-left: auto;
     margin-right: auto; 
-	color:#726f6f;
 	border: solid;
 	border-radius: 00px 60px 0px 60px;
 	padding: 50px;
